# Espresso-refactorised

./: CMakeLists.txt  FindGEMMLOWP.cmake
CNNs/: AlexNet.c  CMakeLists.txt  VGG-11.c
demo/: AlexNet_demo.c  BPAlexNet_demo.c  BPDenseNet_demo.c  BPResNet_demo.c  BPSqueezeNet_demo.c  BPVGG_demo.c  CMakeLists.txt  DenseNet_demo.c  ResNet_demo.c  SqueezeNet_demo.c  VGG_demo.c  float_conv_layer_demo.c
include/: ActivationFunctions.h  BatchNormLayer.h  Cifar10Loader.h  ConvolutionalLayer.h  DataLoader.h  DenseLayer.h  DropoutLayer.h  ESP_RE.h  InputLayer.h  MnistLoader.h  PoolingLayer.h  RandomInit.h  Tensor.h  Utilities.h
include/BitPackingEspresso/: BPActivationFunctions.h  BPBatchNormLayer.h  BPConvolutionalLayer.h  BPDenseLayer.h  BPDenseOutputLayer.h  BPDropoutLayer.h  BPGEMM.h  BPInputLayer.h  BPPoolingLayer.h  BPRandomInit.h  BPTensor.h  BP_ESP.h
include/CNN/: AlexNet.h  BPAlexNet.h  BPDenseNet.h  BPResNet.h  BPSqueezeNet.h  BPVGG.h  DenseNet.h  ResNet.h  SqueezeNet.h  VGG.h
include/DataLoader/: Cifar10Loader.h  MnistLoader.h
include/FloatTypeEspresso/: ActivationFunctions.h  BatchNormLayer.h  Cifar10Loader.h  ConvolutionalLayer.h  DenseLayer.h  DropoutLayer.h  FLOAT_ESP.h  FloatTensor.h  InputLayer.h  PoolingLayer.h  RandomInit.h  Utilities.h
include/IntTypeEspresso/: DenseLayer.h  INT_ESP.h  InputLayer.h  IntTensor.h  Utilities.h
source/: ActivationFunctions.c  BatchNormLayer.c  CMakeLists.txt  Cifar10Loader.c  ConvolutionalLayer.c  DenseLayer.c  DropoutLayer.c  InputLayer.c  MnistLoader.c  PoolingLayer.c  RandomInit.c  Tensor.c  Utilities.c
source/BitPackingEspresso/: BPActivationFunctions.c  BPBatchNormLayer.c  BPConvolutionalLayer.c  BPDenseLayer.c  BPDenseOutputLayer.c  BPDropoutLayer.c  BPGEMM.c  BPInputLayer.c  BPPoolingLayer.c  BPRandomInit.c  BPTensor.c
source/CNN/: AlexNet.c  BPAlexNet.c  BPDenseNet.c  BPResNet.c  BPSqueezeNet.c  BPVGG.c  DenseNet.c  ResNet.c  SqueezeNet.c  VGG.c
source/DataLoader/: Cifar10Loader.c  MnistLoader.c
source/FloatTypeEspresso/: ActivationFunctions.c  BP_Utilities.c  BatchNormLayer.c  CMakeLists.txt  Cifar10Loader.c  ConvolutionalLayer.c  DenseLayer.c  DropoutLayer.c  FloatTensor.c  InputLayer.c  MnistLoader.c  PoolingLayer.c  RandomInit.c
source/IntTypeEspresso/: CMakeLists.txt  DenseLayer.c  InputLayer.c  IntTensor.c
test/: AlexNet.c  AlexNet_old.c  AlexNet_test.c  CMakeLists.txt  ConvLayer_test.c  ResNet_test.c  SqueezeNet_test.c  VGG-11.c  cblas_test.c  cifar10_cnn.c  main.c  mnist_mlp.c  mnist_single_layer.c  read_mnist.c
