# test files
set(ESP_RE_LIBS espresso_refactorised m)# ${BLAS_LIBRARIES})

#add_executable(espresso_refactorised_main mnist_mlp.c)
#target_link_libraries(espresso_refactorised_main ${ESP_RE_LIBS} openblas)

#add_executable(espresso_refactorised_main cifar10_cnn.c)
#target_link_libraries(espresso_refactorised_main ${ESP_RE_LIBS} openblas)

#add_executable(espresso_refactorised_main read_mnist.c)
#target_link_libraries(espresso_refactorised_main ${ESP_RE_LIBS} openblas)

#add_executable(espresso_refactorised_main mnist_single_layer.c)
#target_link_libraries(espresso_refactorised_main ${ESP_RE_LIBS} openblas)

#add_executable(espresso_refactorised_main cblas_test.c)
#target_link_libraries(espresso_refactorised_main ${ESP_RE_LIBS} openblas)

#add_executable(espresso_refactorised_main int_tensor_test.c)
#target_link_libraries(espresso_refactorised_main ${ESP_RE_LIBS} openblas)

#add_executable(espresso_refactorised_main ConvLayer_test.c)
#target_link_libraries(espresso_refactorised_main ${ESP_RE_LIBS} openblas)

#add_executable(espresso_refactorised_main AlexNet_old.c)
#target_link_libraries(espresso_refactorised_main ${ESP_RE_LIBS} openblas)

